# kanotls

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md  install.sh  update_firefox_template.py
.github/workflows/: main.yml
crates/config/: Cargo.toml
crates/config/src/: client.rs  lib.rs  model.rs  script.rs  server.rs  shared.rs
crates/proto/: Cargo.toml
crates/proto/src/: http.rs  lib.rs  socks5.rs  target.rs  uot.rs
crates/session/: Cargo.toml
crates/session/src/: client_pool.rs  frame.rs  lib.rs  server.rs  session.rs  shaper.rs  stream.rs
crates/session/src/session/: tests.rs
crates/tunnel/: Cargo.toml
crates/tunnel/src/: client.rs  common.rs  control_size.rs  entropy.rs  fp.rs  lib.rs  server.rs  template.rs  templates.rs  utils.rs
crates/tunnel/src/server/: auth.rs  camouflage.rs  fallback.rs  mod.rs  replay.rs
deploy/linux/: config.json.example  kanotls.service
docs/: MECHANISM.md  MECHANISM.zh-CN.md
kanotls/: .gitignore  Cargo.toml
kanotls/src/: client.rs  main.rs  server.rs
tools/: capture_firefox_hello.sh  inject_template.sh
