[package]
name = "kanotls-tunnel"
version = "1.1.1"
edition.workspace = true

[dependencies]
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
rustls.workspace = true
webpki-roots.workspace = true
snow.workspace = true
rand.workspace = true
ring = "0.17"
hex.workspace = true
blake2.workspace = true
lru.workspace = true
kanotls-config = { path = "../config" }

lazy_static.workspace = true
futures.workspace = true
subtle.workspace = true
hex-literal = "0.4"
socket2.workspace = true
bytes.workspace = true

[dev-dependencies]
curve25519-dalek = "4"
